package com.personaldj.domain.enums;

public enum RuleType {
    MOOD_MATCH,
    AVOID_REPEAT_ARTIST
}
